--- a/member.css
+++ b/member.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(pics/w1.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(w1.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     font-family: "Agency FB"
