--- a/books.css
+++ b/books.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(css/w2.jpeg);
+    background-image: url(w2.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
 }
